# orch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  opencode.json  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.json
.kb/decisions/: 2025-12-01-five-concerns-architecture.md  2025-12-01-orch-cli-architecture-layered-separation.md  2025-12-06-eliminate-workspace-md.md
.kb/investigations/: 2025-11-30-fix-orch-init-references-deprecated.md  2025-12-01-browser-use-session-persistence.md  2025-12-01-quick-test-read-claude-file.md  2025-12-02-test-agent-mail-integration-register.md  2025-12-02-test-agent-mail-messaging-just.md  2025-12-04-audit-spawn-context-quality.md  2025-12-05-fix-duplicate-prefixes-tmux-window.md  2025-12-05-investigate-where-workspace-files-still.md  2025-12-05-investigate-worker-shutdown-exit-process.md  2025-12-06-agent-registry-removal-remove-registry.md  2025-12-06-beads-enhancement-opportunities-analyze-orch.md  2025-12-06-e2e-integration-tests-orch-ecosystem.md  2025-12-06-eliminate-workspace-entirely-from-orch.md  2025-12-06-fix-primary-artifact-set-non.md  2025-12-06-migrate-utilities-removal.md  2025-12-06-orch-check-false-positive-workspace.md  2025-12-06-orch-complete-parse-areas-needing.md  2025-12-06-orch-complete-verification-filename-mismatch.md  2025-12-06-orch-output-show-issue-titles.md  2025-12-06-pattern-detection-removal-delete-orch.md  2025-12-06-single-coordination-mechanism-converge-beads.md  2025-12-06-spawn-consolidation-reduce-from-2188.md  2025-12-06-unify-path-conventions-remove-orch.md  2025-12-06-update-beads-integration-write-agent.md  2025-12-07-per-project-workers-sessions-design.md  2025-12-07-test-confirm-orchestrator-window-stays.md  2025-12-07-test-real-time-updates.md  2025-12-07-test-verify-client-switching-works.md  2025-12-07-test-verify-per-project-workers.md  2025-12-08-inv-add-auto-track-flag-orch.md  2025-12-08-inv-add-blocker-warning-orch-spawn.md  2025-12-08-inv-add-load-context-spawn-prompt.md  2025-12-08-inv-audit-beads-issues-underspecified-migration.md  2025-12-08-inv-enumerate-orch-references-migrate-keep.md  2025-12-08-inv-investigate-when-orch-complete-removed.md  2025-12-08-inv-orch-lint-issues-validate-beads.md  2025-12-08-inv-orch-work-without-args-show.md  2025-12-08-inv-pass-beads-labels-spawn-context.md  2025-12-08-inv-removing-orch-workspace-directory.md  2025-12-08-inv-show-convergence-status-orch-status.md  (+75 more)
.kn/: entries.jsonl
.opencode/lib/: helpers.ts
.opencode/plugin/: agentlog-inject.ts  bd-close-gate.ts  session-context.ts  usage-warning.ts
.orch/: CLAUDE.md
.orch/decisions/: 2025-12-01-orch-cli-architecture-layered-separation.md  2025-12-04-strategic-orchestrator-pattern.md
docs/: opencode-setup.md  skills-structure.md
docs/designs/: 2025-12-06-e2e-integration-tests.md  2025-12-13-orch-build-opencode.md
docs/patterns/: README.md  agent-salvage-vs-fresh.md  amnesia-resilience-checklist.md  confidence-assessment.md  directive-guidance.md  (+3 more)
hooks/: block-bd-close.py  load-orchestration-context.py
poc/: test_sdk_native.py  test_sdk_oauth.py  test_sdk_simple.py
templates/: project-CLAUDE.md.template
tests/: conftest.py  test_abandon.py  test_agent_actions_api.py  test_agent_routes.py  test_agent_service.py  test_alfred_snippet_generator.py  test_artifact_path_validation.py  test_artifact_search.py  test_async_completion.py  test_attach.py  test_auto.py  test_backends_base.py  test_backends_claude.py  test_backends_codex.py  test_backlog_resolution.py  test_beads_integration.py  test_block_bd_close_hook.py  test_build.py  test_build_opencode.py  test_build_readme.py  test_check_complete_issue_flag.py  test_check_spawn_quality.py  test_clean.py  test_cleanup_daemon.py  test_cli.py  test_cli_backend.py  test_cli_error_wrapper.py  test_codebase_audit_parallel.py  test_complete.py  test_complete_areas_needing_investigation.py  test_complete_backlink.py  test_complete_beads_close.py  test_complete_cli_flags.py  test_complete_discover.py  test_complete_recommendations.py  test_completion_fallback.py  test_config.py  test_context_capture.py  test_context_ref_loading.py  test_cross_repo_sync.py  (+79 more)
(+128 files in other folders)
